--- a/eCommerceProjectWeb/eCommerceProjectWeb/Views/Order/AddOrder.cshtml
+++ b/eCommerceProjectWeb/eCommerceProjectWeb/Views/Order/AddOrder.cshtml
@@ -14,11 +14,11 @@
             <div class="form-group">
                 <input type="hidden" asp-for="OrderId" />
 
-                <input type="hidden" asp-for="ProId" />
+               @* <input type="hidden" asp-for="ProId" />*@
 
-               @* <label asp-for="ProId" class="control-label"></label>
+                <label asp-for="ProId" class="control-label"></label>
                 <select asp-for="ProId" class="form-control" asp-items="@(new SelectList(ViewBag.ProList,"ProId","ProName"))">
-                </select>*@
+                </select>
             </div>
 
              <div class="form-group">
